; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_cookie.c_cookie_sort_ct.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_cookie.c_cookie_sort_ct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Cookie = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @cookie_sort_ct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cookie_sort_ct(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.Cookie*, align 8
  %6 = alloca %struct.Cookie*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.Cookie**
  %9 = load %struct.Cookie*, %struct.Cookie** %8, align 8
  store %struct.Cookie* %9, %struct.Cookie** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.Cookie**
  %12 = load %struct.Cookie*, %struct.Cookie** %11, align 8
  store %struct.Cookie* %12, %struct.Cookie** %6, align 8
  %13 = load %struct.Cookie*, %struct.Cookie** %6, align 8
  %14 = getelementptr inbounds %struct.Cookie, %struct.Cookie* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.Cookie*, %struct.Cookie** %5, align 8
  %17 = getelementptr inbounds %struct.Cookie, %struct.Cookie* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp sgt i64 %15, %18
  %20 = zext i1 %19 to i64
  %21 = select i1 %19, i32 1, i32 -1
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
